--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -14,11 +14,10 @@ trustzones:
         - left: tz1
           right: tz2
       attestationpolicies:
-        - name: ap1
-          kind: 2
-          podkey: ""
-          podvalue: ""
-          namespace: ns1
+        - trustzone: tz1
+          policy: ap1
+          federateswith:
+            - tz2
     - name: tz2
       trustdomain: td2
       kubernetescluster: local2
@@ -32,11 +31,10 @@ trustzones:
         - left: tz2
           right: tz1
       attestationpolicies:
-        - name: ap2
-          kind: 1
-          podkey: foo
-          podvalue: bar
-          namespace: ""
+        - trustzone: tz2
+          policy: ap2
+          federateswith:
+            - tz1
 attestationpolicies:
     - name: ap1
       kind: 2
