Fix config schema for AP without values, add unit tests
Set-based pod label selectors can have no values associated:

  foo,!bar

These map to the Exists,DoesNotExist operators. The config schema has
been updated to make the Values field optional.

Unit tests have been added for label selector parsing and formatting.
An ap3 attestation policy fixture has been added that includes all
supported label selector operators.

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -43,5 +43,29 @@ attestation_policies:
                   operator: In
                   values:
                     - bar
+    - name: ap3
+      kubernetes:
+        namespace_selector:
+            match_labels:
+                kubernetes.io/metadata.name: ns3
+        pod_selector:
+            match_labels:
+                label1: value1
+                label2: value2
+            match_expressions:
+                - key: foo
+                  operator: In
+                  values:
+                    - bar
+                    - baz
+                - key: foo
+                  operator: NotIn
+                  values:
+                    - qux
+                    - quux
+                - key: bar
+                  operator: Exists
+                - key: baz
+                  operator: DoesNotExist
 plugins:
     - test-plugin
