Change federation trust zone names to from and to
A federation was previously composed of left and right trust zones. This
made sense when the relationship was bidirectional, but it is now
unidirectional. The left and right identifiers do not make this obvious.

This change switches the names to "from" and "to".

Depends on: https://github.com/cofide/cofide-api-sdk/pull/15

Fixes: #103

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -7,8 +7,8 @@ trust_zones:
         kind: kubernetes
       bundle_endpoint_url: 127.0.0.1
       federations:
-        - left: tz1
-          right: tz2
+        - from: tz1
+          to: tz2
       attestation_policies:
         - trust_zone: tz1
           policy: ap1
@@ -22,8 +22,8 @@ trust_zones:
         kind: kubernetes
       bundle_endpoint_url: 127.0.0.2
       federations:
-        - left: tz2
-          right: tz1
+        - from: tz2
+          to: tz1
       attestation_policies:
         - trust_zone: tz2
           policy: ap2
