--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -25,13 +25,13 @@ jobs:
         run: just build
 
       - name: Install kind
-        run: tests/integration/install-kind.sh
+        run: just install-kind
 
       - name: Create a kind cluster
-        run: tests/integration/create-kind-cluster.sh
+        run: just create-kind-cluster
 
       - name: Test
-        run: tests/integration/single-trust-zone/test.sh
+        run: just integration-test single-trust-zone
 
   federation:
     name: federation
@@ -52,10 +52,10 @@ jobs:
         run: just build
 
       - name: Install kind
-        run: tests/integration/install-kind.sh
+        run: just install-kind
 
       - name: Create kind clusters
-        run: tests/integration/federation/create-kind-clusters.sh
+        run: just create-kind-clusters 2
 
       - name: Test
-        run: tests/integration/federation/test.sh
+        run: just integration-test federation
