Support setting JWT issuer on trust zones
For some use cases it would be helpful to be able to customise the JWT
issuer (globals.jwtIssuer) in Helm values. This is implemented as an
optional argument to the trust-zone add command:

  cofidectl trust-zone add foo --trust-domain bar.baz --jwt-issuer example-issuer ...

Depends-On: https://github.com/cofide/cofide-api-sdk/pull/3
Fixes: #25

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -15,6 +15,7 @@ trust_zones:
           policy: ap1
           federates_with:
             - tz2
+      jwt_issuer: https://tz1.example.com
     - name: tz2
       trust_domain: td2
       kubernetes_cluster: local2
@@ -30,6 +31,7 @@ trust_zones:
           policy: ap2
           federates_with:
             - tz1
+      jwt_issuer: https://tz2.example.com
 attestation_policies:
     - name: ap1
       kubernetes:
