Support per-plugin configuration
For some plugins it would be useful to be able to store configuration
options in cofide.yaml. This change updates the plugin manager to
support setting and retrieving per-plugin configuration keyed by the
plugin name. The config can be set during Init or later using
GetPluginConfig.

A Struct protobuf message is used to allow for arbitrarily structured
plugin config. Plugins can use the Struct directly or convert it to/from
a more convenient native Go type.

Fixes: #54

Depends-On: https://github.com/cofide/cofide-api-sdk/pull/8

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -70,3 +70,14 @@ attestation_policies:
                   operator: Exists
                 - key: baz
                   operator: DoesNotExist
+plugin_config:
+    plugin1:
+        list-cfg:
+            - 456
+            - another-string
+        map-cfg:
+            key1: yet-another
+            key2: 789
+    plugin2:
+        number-cfg: 123
+        string-cfg: fake-string
