Add trust-zone helm override command
This allows SPIRE Helm values to be overridden.

The provided values are merged with those generated by cofidectl.

Note the comment in values.go about the use of CUE for merging Helm
values.

Fixes: #5

Depends-On: https://github.com/cofide/cofide-api-sdk/pull/7

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -16,6 +16,13 @@ trust_zones:
           federates_with:
             - tz2
       jwt_issuer: https://tz1.example.com
+      extra_helm_values:
+        global:
+            spire:
+                namespaces:
+                    create: true
+        spire-server:
+            logLevel: INFO
     - name: tz2
       trust_domain: td2
       kubernetes_cluster: local2
