--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -1,4 +1,3 @@
-data_source: fake-plugin
 trust_zones:
     - name: tz1
       trust_domain: td1
@@ -90,4 +89,6 @@ plugin_config:
     plugin2:
         number-cfg: 123
         string-cfg: fake-string
-provision_plugin: fake-provision-plugin
+plugins:
+    data_source: fake-datasource
+    provision: fake-provision
