Updates to support the profile field and to set SDS config dynamically

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -23,6 +23,7 @@ trust_zones:
                     create: true
         spire-server:
             logLevel: INFO
+      profile: kubernetes
     - name: tz2
       trust_domain: td2
       kubernetes_cluster: local2
@@ -39,6 +40,7 @@ trust_zones:
           federates_with:
             - tz1
       jwt_issuer: https://tz2.example.com
+      profile: kubernetes
 attestation_policies:
     - name: ap1
       kubernetes:
