Add a CI test that uses cofidectl-test-plugin in the federation scenario

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -41,6 +41,12 @@ jobs:
   federation:
     name: federation
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Repeat the test with in-process plugins and the test gRPC plugin.
+        plugin:
+          - ""
+          - "cofidectl-test-plugin"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,6 +62,10 @@ jobs:
       - name: Build and run tests
         run: just build
 
+      - name: Build and install test plugin
+        run: just install-test-plugin
+        if: ${{ matrix.plugin == 'cofidectl-test-plugin' }}
+
       - name: Install kind
         run: just install-kind
 
@@ -69,3 +79,6 @@ jobs:
 
       - name: Test
         run: just integration-test federation
+        env:
+          DATA_SOURCE_PLUGIN: ${{ matrix.plugin }}
+          PROVISION_PLUGIN: ${{ matrix.plugin }}
