--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,4 +1,3 @@
----
 name: integration
 on:
   push:
@@ -24,17 +23,9 @@ jobs:
       - name: Build and run tests
         run: just build
 
-      - name: Cache Docker images
-        id: docker-cache
-        uses: actions/cache@v3
+      - uses: ./.github/actions/docker-cache
         with:
-          path: /tmp/docker-cache
-          key: ${{ runner.os }}-docker-${{ hashFiles('docker-images.txt') }}
-
-      - name: Load cached Docker images
-        if: steps.docker-cache.outputs.cache-hit == 'true'
-        run: |
-          docker load < /tmp/docker-cache/pulled-images.tar || true
+          images: cloud-provider-kind-cloud-provider:latest
 
       - name: Install kind
         run: just install-kind
