--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build and run tests
         run: just build
 
-      - uses: ./
+      - uses: ./.github/actions/
         with:
           images: cloud-provider-kind-cloud-provider:latest
 
