Add caching composite action to federation job

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,14 +23,15 @@ jobs:
       - name: Build and run tests
         run: just build
 
-      - uses: ./.github/actions/
+      - name: Cache Docker images
+        uses: ./.github/actions/
         with:
           images: cloud-provider-kind-cloud-provider:latest
 
       - name: Install kind
         run: just install-kind
 
-      - name: Save pulled Docker images to cache
+      - name: Save Docker images to cache
         run: |
           mkdir -p /tmp/docker-cache
           # Caches all images
@@ -66,8 +67,20 @@ jobs:
       - name: Build and run tests
         run: just build
 
+      - name: Cache Docker images
+        uses: ./.github/actions/
+        with:
+          images: cloud-provider-kind-cloud-provider:latest
+
       - name: Install kind
         run: just install-kind
+
+      - name: Save Docker images to cache
+        run: |
+          mkdir -p /tmp/docker-cache
+          # Caches all images
+          # docker save $(docker images --filter=reference='*:*' --format='{{.Repository}}:{{.Tag}}') > /tmp/docker-cache/pulled-images.tar
+          docker save cloud-provider-kind-cloud-provider:latest > /tmp/docker-cache/pulled-images.tar
 
       - name: Install ko
         uses: ko-build/setup-ko@v0.6
