[From review] Add ExternalServer field to tz1 and tz2

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -24,6 +24,7 @@ trust_zones:
             logLevel: INFO
       bundle_endpoint_profile: BUNDLE_ENDPOINT_PROFILE_HTTPS_SPIFFE
       profile: kubernetes
+      external_server: false
     - name: tz2
       trust_domain: td2
       kubernetes_cluster: local2
@@ -42,6 +43,7 @@ trust_zones:
       jwt_issuer: https://tz2.example.com
       bundle_endpoint_profile: BUNDLE_ENDPOINT_PROFILE_HTTPS_WEB
       profile: kubernetes
+      external_server: false
 attestation_policies:
     - name: ap1
       kubernetes:
