--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,7 +7,9 @@ linters-settings:
     values:
       const:
         COMPANY: Cofide Limited
+      regexp:
+        YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
     # Require Cofide copyright and SPDX license in all source files.
     template: |
-      Copyright {{ MOD-YEAR-RANGE }} {{ COMPANY }}.
+      Copyright {{ YEAR }} {{ COMPANY }}.
       SPDX-License-Identifier: Apache-2.0
