--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,6 +10,6 @@ linters-settings:
       regexp:
         YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
     # Require Cofide copyright and SPDX license in all source files.
-    template: |
+    template: |-
       Copyright {{ YEAR }} {{ COMPANY }}.
       SPDX-License-Identifier: Apache-2.0
