--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -8,8 +8,8 @@ linters-settings:
       const:
         COMPANY: Cofide Limited
       regexp:
-        YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
+        VALID_YEAR: 202[4-9]|20[3-9][0-9]|2[1-9][0-9][0-9]
     # Require Cofide copyright and SPDX license in all source files.
     template: |-
-      Copyright {{ YEAR }} {{ COMPANY }}.
+      Copyright {{ VALID_YEAR }} {{ COMPANY }}.
       SPDX-License-Identifier: Apache-2.0
