Enable Helm chart recommendations, use 3-namespace deployment
Setting the Helm chart recommendations enabled flag applies various
changes to the configuration, as described in [1]:

- 2 namespace layout (spire-server & spire-system)
- Namespace pod security standards
- Priority class name
- Prometheus
- Strict mode
- Security contexts

We also use a 3rd namespace for the Helm chart state and CRDs as
described in [2].

[1] https://spiffe.io/docs/latest/spire-helm-charts-hardened-about/recommendations/
[2] https://spiffe.io/docs/latest/spire-helm-charts-hardened-about/namespaces/

Fixes: #113
Fixes: #114

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -18,8 +18,10 @@ trust_zones:
       extra_helm_values:
         global:
             spire:
-                namespaces:
-                    create: true
+                caSubject:
+                    commonName: cn.example.com
+                    country: UK
+                    organization: acme-org
         spire-server:
             logLevel: INFO
       bundle_endpoint_profile: BUNDLE_ENDPOINT_PROFILE_HTTPS_SPIFFE
