Add CA subject to Helm values
This is required by Helm recommendations. We provide a default
CA subject, and this can be overridden using custom Helm values.

--- a/internal/pkg/config/testdata/config/full.yaml
+++ b/internal/pkg/config/testdata/config/full.yaml
@@ -20,10 +20,10 @@ trust_zones:
             spire:
                 caSubject:
                     commonName: cn.example.com
-                    country: UK
                     organization: acme-org
         spire-server:
             logLevel: INFO
+            nameOverride: custom-server-name
       bundle_endpoint_profile: BUNDLE_ENDPOINT_PROFILE_HTTPS_SPIFFE
       profile: kubernetes
       external_server: false
