--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,8 +27,11 @@ jobs:
         run: |
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
           cp cloud-provider-kind/Dockerfile ./
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build cloud-provider-kind image
         uses: docker/build-push-action@v6
         with:
           context: .
