--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -36,6 +36,7 @@ jobs:
           context: ./cloud-provider-kind
           push: false
           tags: cloud-provider-kind-cloud-provider:latest
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -81,12 +82,16 @@ jobs:
         run: |
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
           push: false
           tags: cloud-provider-kind-cloud-provider:latest
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
       
