--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build cloud-provider-kind image
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
@@ -98,6 +98,9 @@ jobs:
       - name: Build and install test plugin
         run: just install-test-plugin
         if: ${{ matrix.plugin == 'cofidectl-test-plugin' }}
+      
+      - name: Install kind
+        run: just install-kind
 
       - name: Install ko
         uses: ko-build/setup-ko@v0.6
