--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -29,12 +29,12 @@ jobs:
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
 
       - name: Generate cloud-provider-kind cache key
-        id: cloud-provider-cache
         run: |
           # echo "hash=$(cd cloud-provider-kind && find . -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
           echo "hash=$(cd cloud-provider-kind && git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Cache cloud-provider-kind image
+        id: cloud-provider-cache
         uses: actions/cache@v3
         with:
           path: /tmp/cloud-provider-kind-image
@@ -47,11 +47,11 @@ jobs:
           docker image ls
 
       - name: Set up Docker Buildx
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Build cloud-provider-kind image
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
@@ -105,12 +105,12 @@ jobs:
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
 
       - name: Generate cloud-provider-kind cache key
-        id: cloud-provider-cache
         run: |
           # echo "hash=$(cd cloud-provider-kind && find . -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
           echo "hash=$(cd cloud-provider-kind && git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Cache cloud-provider-kind image
+        id: cloud-provider-cache
         uses: actions/cache@v3
         with:
           path: /tmp/cloud-provider-kind-image
@@ -121,11 +121,11 @@ jobs:
         run: docker load < /tmp/cloud-provider-kind-image
 
       - name: Set up Docker Buildx
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Build cloud-provider-kind image
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
