--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -29,29 +29,29 @@ jobs:
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
 
       - name: Generate cloud-provider-kind cache key
+        id: cloud-provider-kind-cache-key
         run: |
-          # echo "hash=$(cd cloud-provider-kind && find . -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
           echo "hash=$(cd cloud-provider-kind && git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Cache cloud-provider-kind image
-        id: cloud-provider-cache
+        id: cloud-provider-kind-cache
         uses: actions/cache@v3
         with:
           path: /tmp/cloud-provider-kind-image
-          key: cloud-provider-kind-${{ steps.cloud-provider-cache.outputs.hash }}
+          key: cloud-provider-kind-${{ steps.cloud-provider-kind-cache-key.outputs.hash }}
 
       - name: Load cached image
-        if: steps.cloud-provider-cache.outputs.cache-hit == 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit == 'true'
         run: |
           docker load < /tmp/cloud-provider-kind-image
           docker image ls
 
       - name: Set up Docker Buildx
-        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit != 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Build cloud-provider-kind image
-        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit != 'true'
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
@@ -105,27 +105,27 @@ jobs:
           git clone https://github.com/kubernetes-sigs/cloud-provider-kind
 
       - name: Generate cloud-provider-kind cache key
+        id: cloud-provider-kind-cache-key
         run: |
-          # echo "hash=$(cd cloud-provider-kind && find . -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)" >> $GITHUB_OUTPUT
           echo "hash=$(cd cloud-provider-kind && git rev-parse HEAD)" >> $GITHUB_OUTPUT
 
       - name: Cache cloud-provider-kind image
-        id: cloud-provider-cache
+        id: cloud-provider-kind-cache
         uses: actions/cache@v3
         with:
           path: /tmp/cloud-provider-kind-image
-          key: cloud-provider-kind-${{ steps.cloud-provider-cache.outputs.hash }}
+          key: cloud-provider-kind-${{ steps.cloud-provider-kind-cache-key.outputs.hash }}
 
       - name: Load cached image
-        if: steps.cloud-provider-cache.outputs.cache-hit == 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit == 'true'
         run: docker load < /tmp/cloud-provider-kind-image
 
       - name: Set up Docker Buildx
-        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit != 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Build cloud-provider-kind image
-        if: steps.cloud-provider-cache.outputs.cache-hit != 'true'
+        if: steps.cloud-provider-kind-cache.outputs.cache-hit != 'true'
         uses: docker/build-push-action@v6
         with:
           context: ./cloud-provider-kind
