--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,10 +1,10 @@
----
 name: integration
 on:
   push:
     branches:
       - main
   pull_request:
+
 jobs:
   single-trust-zone:
     name: single trust zone
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build and run tests
         run: just build
+
+      - name: Build and cache cloud-provider-kind image
+        uses: ./.github/actions/cache-cloud-provider-kind-image
 
       - name: Install kind
         run: just install-kind
@@ -62,6 +65,9 @@ jobs:
       - name: Build and run tests
         run: just build
 
+      - name: Build and cache cloud-provider-kind image
+        uses: ./.github/actions/cache-cloud-provider-kind-image
+      
       - name: Build and install test plugin
         run: just install-test-plugin
         if: ${{ matrix.plugin == 'cofidectl-test-plugin' }}
