CI: Run Go tests with race detector enabled

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,5 @@ jobs:
       - name: Install dependencies
         run: |
           go mod download
-      - name: Build and run tests
-        run: just test
+      - name: Build and run tests with race detector enabled
+        run: just test-race
