--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened, labeled, unlabeled]
 
 jobs:
   lint:
@@ -23,7 +22,7 @@ jobs:
           args: --timeout=5m
 
   build-test:
-    name: build
+    name: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
