--- a/demos/Justfile
+++ b/demos/Justfile
@@ -31,12 +31,6 @@ ensure-namespace context:
         fi \
     fi
 
-# Clone the cofide-demos git repo.
-clone-demos-repo:
-    if [ ! -d cofide-demos ]; then \
-        git clone https://github.com/cofide/cofide-demos; \
-    fi
-
 # Deploy ping-pong server and client
-deploy-ping-pong client_context server_context="": clone-demos-repo (ensure-namespace client_context) (ensure-namespace server_context)
+deploy-ping-pong client_context server_context="": (ensure-namespace client_context) (ensure-namespace server_context)
     ping-pong/deploy.sh {{namespace}} {{client_context}} {{server_context}}
