--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,4 +49,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload ${{ github.ref_name }} dist/cofidectl-${{ matrix.goos }}-${{ matrix.goarch }}-${{ github.ref_name }} --clobber
+          BINARY="dist/cofidectl-${{ matrix.goos }}-${{ matrix.goarch }}-${{ github.ref_name }}"
+          gh release upload ${{ github.ref_name }} $BINARY --clobber
+          shasum -a 256 $BINARY > $BINARY.sha256 
+          gh release upload ${{ github.ref_name }} $BINARY.sha256 --clobber
